--- a/uzduotys/uzduotis1/Zygis/index.html
+++ b/uzduotys/uzduotis1/Zygis/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Link to contacts</title>
 </head>
 
 <body>
 
-  <a href = "contacts.html" target = "_blank">
-    <img src="https://lh3.googleusercontent.com/UHqejjqVZRnEt4gyF8zeuICLYKqqhpNIQxICy8c1jAyTVNUKUWoVNoenRsRUjtTKzAGP=w300">
+  <h1>Puslapio antraste</h1>
+
+  <a href="contacts.html" target="_blank">
+    <img src="https://lh3.googleusercontent.com/UHqejjqVZRnEt4gyF8zeuICLYKqqhpNIQxICy8c1jAyTVNUKUWoVNoenRsRUjtTKzAGP=w300"/>
   </a>
+
+  <p>Sed ut <i>perspiciatis</i> unde omnis iste natus error sit voluptatem accusantium doloremque
+    laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+
+  <form>
+    <input type = "text" name = "email" placeholder="Please enter your email"/>
+    <br/> <br/>
+    <button onclick = "alert('kas cia dabar?')">Submit</button>
+  </form>
+
+
 </body>
 
 
