--- a/uzduotys/uzduotis2/tautvydas/1/index.html
+++ b/uzduotys/uzduotis2/tautvydas/1/index.html
@@ -1,10 +1,25 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Untitled Document</title>
-    </head>
-    
-    <body>
-    </body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>mokomes HTML</title>
+    <!-- <link href=""  /> -->
+  </head>
+
+  <body>
+         <h1>Testtuojame HTMl</h1>
+
+         <!-- C:\Users\User\Documents\Tautyvas_06\uzduotys\uzduotis2\tautvydas\1\mike.jpg
+
+         ../img/mike.jpg
+         mike.jpg
+        -->
+
+        <!-- nuotraukos atvaizdavimas -->
+        <img src="../nuotraukos/vestuves.jpg" width="600px" height="500px" alt="vestuves Birstone logo "/>
+
+
+
+
+  </body>
 </html>
