--- a/uzduotys/uzduotis2/Nerijus/uzduotis2/contacts.html
+++ b/uzduotys/uzduotis2/Nerijus/uzduotis2/contacts.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Kontaktai</title>
-  </head>
-  <body>
 
-    <h3>Kontaktai</h3>
+<head>
+  <meta charset="utf-8">
+  <title>Kontaktai</title>
+</head>
 
-      <button onclick="alert('siuo metu neveikia')">Vartotojo vardas</button><br>
-      <button>Vartotojo slaptazodis</button><br>
-      <button>elektroninis pastas</button>
+<body>
 
-        <form action="index.html" method="post">
-          <label> Vartotojo vardas</label> <br/>
-          <input name="username" type="text" value=""/> <br/>
-          <label> Vartotojo emailas</label> <br/>
-          <input name="email" type="email" value=""/> <br/>
-          <label> Vartotojo slaptazodis</label> <br/>
-          <input name="password" type="password" value=""/> <br/>
+  <h3>Kontaktai</h3>
 
-          <input type='submit' value="Registruotis"/>
-          <!-- ARBA -->
-          <button type="submit"> Registruotis </button>
+  <button onclick="alert('siuo metu neveikia')">Vartotojo vardas</button><br>
+  <button>Vartotojo slaptazodis</button><br>
+  <button>elektroninis pastas</button>
 
+  <form action="index.html" method="post">
+    <label> Vartotojo vardas</label> <br/>
+    <input name="username" type="text" value="" /> <br/>
+    <label> Vartotojo emailas</label> <br/>
+    <input name="email" type="email" value="" /> <br/>
+    <label> Vartotojo slaptazodis</label> <br/>
+    <input name="password" type="password" value="" /> <br/>
 
+    <input type='submit' value="Registruotis" />
+    <!-- ARBA -->
+    <button type="submit"> Registruotis </button>
 
+    <h2>MUSU ADRESAS <h2>
+              <div style="width: 100%"><iframe width="900" height="400" src="https://www.mapsdirections.info/en/custom-google-maps/map.php?width=100%&height=400&hl=ru&q=kursiu%20g.%207+(coding%20school)&ie=UTF8&t=&z=13&iwloc=A&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"/>
+
+                <div>
+                <iframe width="420" height="315"
+                    src="https://www.youtube.com/embed/XGSy3_Czz8k">
+                    </iframe>
+                </div>
         </form>
 
   </body>
