--- a/uzduotys/uzduotis2/Zygis/1/contacts.html
+++ b/uzduotys/uzduotis2/Zygis/1/contacts.html
@@ -1,34 +1,44 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset = "utf-8">
-        <title>Contacts</title>
-    </head>
-    <body>
-        <h1>Contacts</h1>
 
+<head>
+    <meta charset="utf-8">
+    <title>Contacts</title>
+</head>
 
+<body>
+    <h1>Contacts</h1>
+
+    <header>
         <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "about.html">About</a></li>
-            <li><a href = "gallery.html">Gallery</a></li>
-            <li><a href = "contacts.html">Contacts</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
         </ul>
+    </header>
 
+    <form action="index.html" method="post">
+        <label>Username</label>
+        <br/>
+        <input name="username" type="text" placeholder="Username" />
+        <br/>
+        <label>Password</label>
+        <br/>
+        <input name="password" type="password" />
+        <br/>
+        <label>Email</label>
+        <br/>
+        <input name="email" type="email" placeholder="something@name.what" />
+        <br/>
+        <button type="submit">Submit</button>
+        <button type = "button">Register</button>
+    </form>
 
-        <form action = "" method = "get">
-            <p>Username</p>
-            <input  name = "username" placeholder="Username"/>
-            <br/>
-            <p>Password</p>
-            <input name = "password"/>
-            <br/>
-            <p>Email</p>
-            <input name="email" placeholder="something@name.what"/>
-            <br/>
-            <button type="button">Submit</button>
-        </form>
+            <div class="map">
+                <iframe src="http://maps.google.com/maps?q=54.89756839,23.89740139&z=15&output=embed"></iframe>
+            </div>
 
-        <iframe src="http://maps.google.com/maps?q=54.89756839,23.89740139&z=15&output=embed"></iframe>
-    </body>
+</body>
+
 </html>
