--- a/uzduotys/uzduotis2/Zygis/1/gallery.html
+++ b/uzduotys/uzduotis2/Zygis/1/gallery.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset = "utf-8">
-        <title>Gallery</title>
-    </head>
-    <body>
-        <h1>Gallery</h1>
-        
-        <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "about.html">About</a></li>
-            <li><a href = "gallery.html">Gallery</a></li>
-            <li><a href = "contacts.html">Contacts</a></li>
-        </ul>
 
-        <img src = "http://facecoverz.com/static/img/uploads/o_facecoverz.com-1319324391460.png" alt = "ministry of silly walks">
-        
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>Gallery</title>
+</head>
+
+<body>
+    <h1>Gallery</h1>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
+        </ul>
+    </header>
+
+    <img src="http://facecoverz.com/static/img/uploads/o_facecoverz.com-1319324391460.png" alt="ministry of silly walks">
+
+</body>
+
 </html>
