--- a/uzduotys/uzduotis2/Zygis/1/index.html
+++ b/uzduotys/uzduotis2/Zygis/1/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
-        <meta charset = "utf-8"/>
-        <title>Pirmas puslapis</title>
+<head>
+    <meta charset="utf-8" />
+    <title>Pirmas puslapis</title>
 
 
-    </head>
+</head>
 
-    <body>
-        <h1>Home</h1>
+<body>
+    <h1>Home</h1>
+    <header>
         <ul>
-            <li><a href = "index.html">Home</a></li>
-            <li><a href = "about.html">About</a></li>
-            <li><a href = "gallery.html">Gallery</a></li>
-            <li><a href = "contacts.html">Contacts</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
+            <li><a href="contacts.html">Contacts</a></li>
         </ul>
+    </header>
 
-
-    </body>
+</body>
 
 
 
