--- a/uzduotys/uzduotis2/tautvydas/2/contacts.html
+++ b/uzduotys/uzduotis2/tautvydas/2/contacts.html
@@ -7,6 +7,15 @@
   <body>
 
     <h1>Contacts</h1>
+    <header> 
+      <a href="https://www.google.com"> Aplankyti google</a>
+      <ul>
+        <li> <a href="index.html">Home</a> </li>
+        <li> <a href="about.html"> About </a> </li>
+        <li> <a href="gallery.html">Gallery </a> </li>
+        <li> <a href="contacts.html">Contacts </a> </li>
+      </ul>
+    </header>
 
     <form action="index.html" method="post">
       <label>Vartoto vardas</label>   <br />
@@ -18,8 +27,25 @@
 
       <input type="submit" value="Registruotis" />
       <!-- ARBA -->
-      <button type="submit" /> Registruotis </button>
+      <button type="submit"> Registruotis </button>
     </form>
+
+
+    <h2>Musu adresas</h2>
+
+  <div style="width: 100">
+    <iframe width="1400" height="400" src="https://www.mapsdirections.info/en/custom-google-maps/map.php?width=900&height=400&hl=ru&q=kaunas%20%2Ckursiu%20g.%207+(Programacimo%20mokymai)&ie=UTF8&t=&z=13&iwloc=A&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0">
+
+    </iframe>
+  </div>
+
+  <div>
+      <iframe width="420" height="315"
+      src="https://www.youtube.com/embed/XGSy3_Czz8k">
+      </iframe>
+  </div>
+
+
 
 
   </body>
