--- a/uzduotys/uzduotis2/tautvydas/2/gallery.html
+++ b/uzduotys/uzduotis2/tautvydas/2/gallery.html
@@ -7,7 +7,15 @@
   <body>
 
       <h1>Gallery</h1>
-
+      <header> 
+        <a href="https://www.google.com"> Aplankyti google</a>
+        <ul>
+          <li> <a href="index.html">Home</a> </li>
+          <li> <a href="about.html"> About </a> </li>
+          <li> <a href="gallery.html">Gallery </a> </li>
+          <li> <a href="contacts.html">Contacts </a> </li>
+        </ul>
+      </header>
       <img src="https://s-media-cache-ak0.pinimg.com/236x/0e/60/33/0e6033a97a3d1d121523c260db3146f1.jpg"   />
 
 
