--- a/uzduotys/uzduotis2/tautvydas/3/index.html
+++ b/uzduotys/uzduotis2/tautvydas/3/index.html
@@ -4,26 +4,31 @@
 <head>
   <meta charset="utf-8">
   <title>4 daliu puslapis</title>
-  <!-- <link rel="stylesheet" type="text/css" href="main.css" /> -->
-
   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
 
 
+    <h1>     Home2</h1>
+
   <header>
-    <h1>       Home</h1>
+    <h1>     Home</h1>
     <a href="https://www.google.com"> Aplankyti google</a>
     <ul>
       <li> <a href="index.html">Home</a> </li>
-      <li> <a href="about.html"> About </a> </li>
-      <li> <a href="gallery.html">Gallery </a> </li>
+      <li>
+
+        <a class="melynas-tekstas" href="about.html">
+           About <span class="melynas"> my page</span> welcome!
+        </a>
+       </li>
+      <li> <a id="reklama" href="gallery.html">Gallery </a> </li>
       <li> <a href="contacts.html">Contacts </a> </li>
     </ul>
   </header>
 
-  <!-- ID     EA: uzduotis:
+  <!-- IDEA: uzduotis:
 1) gallery page ideti nuotrauka
 2) about page ideti paragrafa <p>
 3) contacts page ideti forma: username, password, email, mygtuka
