--- a/uzduotys/uzduotis2/tautvydas/4/index.html
+++ b/uzduotys/uzduotis2/tautvydas/4/index.html
@@ -8,7 +8,31 @@
 </head>
 
 <body>
-    <h1>4 uzduotis</h1>
+    <h1>Uour Menu</h1>
+
+    <!--  -->
+    <section>
+        <h2 class="first-title">Chicken</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+    </section>
+
+    <section>
+      <h2 class="second-title">Beef</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </section>
+
+    <section  class="section-3">
+
+      <h2 >Sushi</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </section>
+
 
 </body>
 
