nauji failai css

--- a/uzduotys/uzduotis2/Nerijus/uzduotis3css/index.html
+++ b/uzduotys/uzduotis2/Nerijus/uzduotis3css/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>4 daliu puslapis</title>
+   <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
   <a href="https://www.google.com"> Aplankyti Google </a>
 
   <ul>
-    <li> <a href="index.html">Home</a> </li>
-        <li> <a href="about.html">About</a> </li>
-        <li> <a href="galery.html">Gallery</a> </li>
+        <li> <a href="index.html">Home</a> </li>
+        <li> <a class="melynas-tekstas" href="about.html">About</a> </li>
+        <li> <a id="reklama" href="galery.html">Gallery</a> </li>
     <li> <a href="contacts.html">Contacts</a> </li>
   </ul>
 
