--- a/uzduotys/uzduotis2/Nerijus/uzduotis2/contacts.html
+++ b/uzduotys/uzduotis2/Nerijus/uzduotis2/contacts.html
@@ -22,19 +22,25 @@
     <label> Vartotojo slaptazodis</label> <br/>
     <input name="password" type="password" value="" /> <br/>
 
-    <input type='submit' value="Registruotis" />
+    <input type="submit" value="Registruotis" />
     <!-- ARBA -->
     <button type="submit"> Registruotis </button>
 
-    <h2>MUSU ADRESAS <h2>
+    <h2>MUSU ADRESAS </h2>
+      </form>
               <div style="width: 100%"><iframe width="900" height="400" src="https://www.mapsdirections.info/en/custom-google-maps/map.php?width=100%&height=400&hl=ru&q=kursiu%20g.%207+(coding%20school)&ie=UTF8&t=&z=13&iwloc=A&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"/>
 
-                <div>
-                <iframe width="420" height="315"
-                    src="https://www.youtube.com/embed/XGSy3_Czz8k">
-                    </iframe>
-                </div>
-        </form>
+
+
+
+
+            </div>
+
+            <iframe width="420" height="315"
+                src="https://www.youtube.com/embed/XGSy3_Czz8k">
+                </iframe>
+
+
 
   </body>
 </html>
