--- a/uzduotys/uzduotis2/Zygis/3/index.html
+++ b/uzduotys/uzduotis2/Zygis/3/index.html
@@ -5,20 +5,28 @@
     <meta charset="utf-8" />
     <title>Pirmas puslapis</title>
     <link rel = "stylesheet" type = "text/css" href = "main.css"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
 </head>
 
 <body>
-    <h1>Almost home</h1>
-    <header>
-        <h1>HOOOOME!!!!</h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a class = "blue-text" href="about.html">About</a></li>
-            <li><a id = "reklama" href="gallery.html">Gallery</a></li>
-            <li><a class = "nuoroda" href="contacts.html">Contacts</a></li>
-        </ul>
-    </header>
+    <h1>Our menu</h1>
+
+    <section>
+        <h2 class = "section-1-heading">Chicken</h2>
+        <p>Pariatur sint eiusmod adipisicing enim cupidatat voluptate voluptate cillum sint. In consequat tempor culpa elit enim officia. Velit ut occaecat elit laborum. Sunt enim amet voluptate officia. Exercitation ullamco ad commodo enim velit adipisicing ullamco consectetur officia ea veniam.</p>
+    </section>
+
+
+    <section>
+        <h2 class = "section-2-heading">Beef</h2>
+        <p>Ea anim officia consequat aliqua non velit aliquip Lorem dolor culpa deserunt. Veniam aliquip irure eu occaecat dolor pariatur eu velit velit dolore. Qui aliqua cupidatat Lorem qui do amet ut dolore aliqua est qui ea. Labore in commodo tempor minim reprehenderit labore sunt eiusmod excepteur aliqua.</p>       
+    </section>
+
+    <section class = "section-3">
+        <h2>Sushi</h2>
+        <p>Non et ut cillum veniam officia id est sint excepteur. Magna cupidatat exercitation duis dolore deserunt excepteur quis consectetur dolore labore eu dolor. Ipsum sint ad nisi cillum enim qui aliqua sit aliquip cupidatat deserunt.</p>
+    </section>
 
 
 </body>
