--- a/uzduotys/uzduotys3-CSS/tautvydas/1/index.html
+++ b/uzduotys/uzduotys3-CSS/tautvydas/1/index.html
@@ -2,96 +2,38 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>testuosu puslapi</title>
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:700,800,900" rel="stylesheet">
-    <!-- IDEA: testuojant geriau matyti media pakeitimai -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <meta charset="utf-8">
+  <title>4 daliu puslapis</title>
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-    <h1>Header</h1>
+    <h1>Uour Menu</h1>
 
-    <div id="header">
-        <div id="navigation">
-            <ul>
-                <li><a href="">Home</a> </li>
-                <li>Our Team </li>
-                <li>Projects </li>
-                <li>Contact </li>
-            </ul>
-        </div>
-        <div id="search">
-            <form action="" method="get">
-                <input type="text" placeholder="Search query" />
-                <button type="submit">Go!</button>
-            </form>
-        </div>
-    </div>
+    <!--  -->
+    <section>
+        <h2 class="first-title">Chicken</h2>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+    </section>
 
-    <div id="wrapper">
-        <div id="content">
-            <h2>Article heading</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo <span class="mano-spec-klase">consequat</span>
-            </p>
-            <article>
-                <h3>subsection</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </article>
+    <section>
+      <h2 class="second-title">Beef</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </section>
 
-            <article>
-                <h3>Anover subsection</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </article>
+    <section  class="section-3  ">
 
-            <article>
-                <h3>Anover subsection</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </article>
+      <h2 >Sushi</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+    </section>
 
-            <article>
-                <h3>Anover subsection</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <p>
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
-            </article>
-        </div>
-
-        <div id="sidebar">
-            <h2>Related</h2>
-            <ul>
-                <li> Oh I do like to be beside </li>
-                <li> Oh I do like to be beside </li>
-                <li> Oh I do like to be beside </li>
-                <li> Oh I do like to be </li>
-            </ul>
-        </div>
-        <div class="clear-float"></div>
-    </div>
-
-    <div id="footer">
-        &copy 2050
-    </div>
 
 </body>
 
