--- a/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
+++ b/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
@@ -11,7 +11,28 @@
 <body>
     <h1>Uour Menu</h1>
 
+    <h2></h2>
 
+    <header>
+      <nav>
+        <ul>
+          <li> HOME</li>
+        </ul>
+      </nav>
+
+      <div id="search">
+
+      </div>
+    </header>
+
+    <div id="wrapper">
+
+
+    </div>
+
+    <footer>
+      
+    </footer>
 
 
 </body>
