--- a/uzduotys/uzduotys3-CSS/zygis/2/index.html
+++ b/uzduotys/uzduotys3-CSS/zygis/2/index.html
@@ -5,6 +5,7 @@
     <title>Kreizi vebsaitas</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
+    <link rel="stylesheet" type="test/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css"/>
 </head>
 
 <body>
@@ -12,37 +13,55 @@
         <h1>Header</h1>
         <nav>
             <ul>
-                <a href = "#"><li>HOME</li></a>
-                <li><a href = "#">OUR TEAM</a></li>
-                <li><a href = "#">PROJECTS</a></li>
-                <li><a href = "#">CONTACT</a></li>   
+                <a href="#">
+                    <li>HOME</li>
+                </a>
+                <a href="#">
+                    <li>OUR TEAM</li>
+                </a>
+                <a href="#">
+                    <li>PROJECTS</li>
+                </a>
+                <a href="#">
+                    <li>CONTACTS</li>
+                </a>
             </ul>
-            <form>
+            <form class="search">
                 <input type="text" name="search" value="">
-                <button type="button">GO</button>
+                <button type="submit">GO</button>
             </form>
         </nav>
     </header>
-    <article>
-        <h2>Article Heading</h2>
-        <p>Proident cillum velit sit nulla quis laboris nulla deserunt sunt tempor esse exercitation nostrud. Culpa mollit laboris minim tempor anim enim minim duis exercitation Lorem velit incididunt enim. Eu exercitation exercitation officia cupidatat duis velit tempor. Amet id culpa amet ullamco exercitation.</p>
-        <h3>Subheading</h3>
-        <p>Nulla eiusmod aliqua laboris Lorem velit quis velit excepteur duis est in magna.</p>
-        <p>Aute Lorem duis ipsum nisi eiusmod veniam.</p>
-        <h3>Another Subheading</h3>
-        <p>Fugiat dolore tempor dolor eiusmod est dolore velit aute.</p>
-        <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id.</p>
-    </article>
-    <aside>
-        <h2>Related</h2>
-        <ul>
-            <li><a href = "#">Look, mommy</a></li>
-            <li><a href = "#">There's an airplane</a></li>
-            <li><a href = "#">Up in the sky</a></li>
-            <li><a href = "#">All in all</a></li>
-            <li><a href = "#">Another brick in the wall</a></li>
-        </ul>
-    </aside>
+
+    <div class="wrapper">
+        <article>
+            <h2>Article Heading</h2>
+            <p>Proident cillum velit sit nulla quis laboris nulla deserunt sunt tempor esse exercitation nostrud. Culpa mollit
+                laboris minim tempor anim enim minim duis exercitation Lorem velit incididunt enim. Eu exercitation exercitation
+                officia cupidatat duis velit tempor. Amet id culpa amet ullamco exercitation.</p>
+            <h3>Subheading</h3>
+            <p>Nulla eiusmod aliqua laboris Lorem velit quis velit excepteur duis est in magna.</p>
+            <p>Aute Lorem duis ipsum nisi eiusmod veniam.</p>
+            <h3>Another Subheading</h3>
+            <p>Fugiat dolore tempor dolor eiusmod est dolore velit aute.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id.</p>
+        </article>
+
+        <aside>
+            <h2>Related</h2>
+            <ul>
+                <li><a href="#">Look, mommy</a></li>
+                <li><a href="#">There's an airplane</a></li>
+                <li><a href="#">Up in the sky</a></li>
+                <li><a href="#">All in all</a></li>
+                <li><a href="#">Another brick in the wall</a></li>
+            </ul>
+        </aside>
+    </div>
+
+    <footer>
+        <p>&#9400; 2017 Mokomes codint. All rights reserved</p>
+    </footer>
 </body>
 
 </html>
