--- a/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
+++ b/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
@@ -26,12 +26,20 @@
     </header>
 
     <div id="wrapper">
+        <!-- musu turinys -->
+        <section>
+            <h2>Article heading</h2>
+            ....
+        </section>
 
-
+        <aside>
+            <h2>Related</h2>
+        </aside>
+        <div class="clear-float"> </div>
     </div>
 
     <footer>
-      
+
     </footer>
 
 
