--- a/uzduotys/uzduotys3-CSS/Paulius/2 uzduotis tesiam nuo Tautvio/index.html
+++ b/uzduotys/uzduotys3-CSS/Paulius/2 uzduotis tesiam nuo Tautvio/index.html
@@ -19,23 +19,22 @@
             <li> <a href="#testuoju">HOME</a> </li>
 <!--       # rišasi prie DIV apačioj ir nuskrolins iki pačios apačios.
 /-->
-            <li> HOME</li>
-            <li> HOME</li>
-            <li> HOME</li>
-            
+            <li> <a href="#testuoju">CONTACT</a> </li>
+            <li> <a href="#testuoju">OUR team</a> </li>
+            <li> <a href="#testuoju">PROJECTS</a> </li>
         </ul>
       </nav>
+        <input type="text"> 
+      <div id="search"></div>
 
-      <div id="search">
-
-      </div>
+          
     </header>
 
     <div id="wrapper">
         <!-- musu turinys -->
         <section>
             <h2>Article heading</h2>
-            ....
+            <p> Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas  Tekstas </p>
         </section>
 
         <aside>
