--- a/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
+++ b/uzduotys/uzduotys3-CSS/tautvydas/2/index.html
@@ -6,10 +6,12 @@
   <title>4 daliu puslapis</title>
   <link rel="stylesheet" type="text/css" href="css/main.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- google fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Uour Menu</h1>
+    <h1>Header</h1>
 
     <h2></h2>
 
@@ -27,7 +29,10 @@
       </nav>
 
       <div id="search">
-
+          <form>
+            <input class="search-box" type="text" name="search" value="" placeholder="Search query">
+            <button>GO!</button>
+          </form>
       </div>
     </header>
 
