pradeda kita uzduotis

--- a/uzduotys/uzduotys3-CSS/zygis/2/index.html
+++ b/uzduotys/uzduotys3-CSS/zygis/2/index.html
@@ -5,12 +5,13 @@
     <title>Kreizi vebsaitas</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
-    <link rel="stylesheet" type="test/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css"/>
+    <link rel="stylesheet" type="test/css" href="https://necolas.github.io/normalize.css/7.0.0/normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Antic+Slab|Anton" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <h1>Header</h1>
+        <h1 class="header">Header</h1>
         <nav>
             <ul>
                 <a href="#">
@@ -26,29 +27,89 @@
                     <li>CONTACTS</li>
                 </a>
             </ul>
-            <form class="search">
-                <input type="text" name="search" value="">
-                <button type="submit">GO</button>
+            <form class="search" meathod="get">
+                <input class="searchbar" type="text" name="search" value="" placeholder = "Search"/>
+                <button class="search-button" type="submit">GO</button>
             </form>
         </nav>
     </header>
 
     <div class="wrapper">
         <article>
-            <h2>Article Heading</h2>
+            <h2 class="article-head header">Article Heading</h2>
             <p>Proident cillum velit sit nulla quis laboris nulla deserunt sunt tempor esse exercitation nostrud. Culpa mollit
                 laboris minim tempor anim enim minim duis exercitation Lorem velit incididunt enim. Eu exercitation exercitation
                 officia cupidatat duis velit tempor. Amet id culpa amet ullamco exercitation.</p>
-            <h3>Subheading</h3>
+            <h3 class="header">Subheading</h3>
             <p>Nulla eiusmod aliqua laboris Lorem velit quis velit excepteur duis est in magna.</p>
             <p>Aute Lorem duis ipsum nisi eiusmod veniam.</p>
-            <h3>Another Subheading</h3>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <h3 class="header">Another Subheading</h3>
             <p>Fugiat dolore tempor dolor eiusmod est dolore velit aute.</p>
-            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
+            <p>Esse magna culpa quis esse eu elit duis velit cupidatat et cillum reprehenderit ullamco id. Officia pariatur
+                dolor amet dolore incididunt cupidatat dolore ut laboris laboris non aliquip et aute. Ad adipisicing nisi
+                fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua. Dolor sint labore fugiat excepteur
+                Lorem laboris reprehenderit. Officia pariatur dolor amet dolore incididunt cupidatat dolore ut laboris laboris
+                non aliquip et aute. Ad adipisicing nisi fugiat veniam consectetur duis ullamco pariatur fugiat fugiat aliqua.
+                Dolor sint labore fugiat excepteur Lorem laboris reprehenderit.</p>
         </article>
 
         <aside>
-            <h2>Related</h2>
+            <h2 class="header">Related</h2>
             <ul>
                 <li><a href="#">Look, mommy</a></li>
                 <li><a href="#">There's an airplane</a></li>
