--- a/uzduotys/uzduotys3-CSS/zygis/3/index.html
+++ b/uzduotys/uzduotys3-CSS/zygis/3/index.html
@@ -1,32 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Tailored shirts</title>
-        <meta charset="utf-8"/>
-        <link rel = "stylesheet" type = "text/css" href = "./css/main.css"/>
-    </head>
+
+<head>
+    <title>Tailored shirts</title>
+    <meta charset="utf-8" />   
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
+    <link rel="stylesheet" type="text/css" href="./css/main.css" />
+</head>
 
 
-    <body>
-        <header>
-                <a href="index.html"><img src = "./images/logo.png" alt="shirts logo"/></a>
-                <h1>A new world of tailored shirts form women</h1>
+<body>
 
-                <h1>Arriving 2017</h1>
-        </header>
-        <div class = "wrapper">
-            <p>Sign up for reinvented wardrobe classics, made for movement</p>
 
+    <header>
+        <a href="index.html"><img src = "./images/logo.png" alt="shirts logo"/></a>
+        <h1>A new world of tailored shirts for women</h1>
+
+        <h2>Arriving 2017</h2>
+    </header>
+    <div class="wrapper">
+        <p class = "explanation">Sign up for reinvented wardrobe classics, made for movement</p>
+
+        <div class="row">
             <form>
-                <label>First name</label>
-                <input type="text" name="fname" value=""/><br/>
-                <label>Last name</label>
-                <input type="text" name="lname" value=""/><br/>
-                <label>Your email address</label>
-                <input type="text" name="email" value=""/></br>
-                <button type="submit" name="submit">Submit</button>
+                <div class="col-md-6">
+                    <label>First name</label> <br/>
+                    <input class = "input-field" type="text" name="fname" value="" /><br/>
+                </div>
+                <div class="col-md-6">
+                    <label>Last name</label><br/>
+                    <input class = "input-field" type="text" name="lname" value="" /><br/>
+                </div>
+                <div class="col-md-12">
+                    <label>Your email address</label><br/>
+                    <input class = "email-field" type="text" name="email" value=""/><br/>
+                    <button class = "sign-up-button" type="submit" name="submit">SIGN UP</button>
+                </div>
             </form>
-
         </div>
-    </body>
+
+    </div>
+
+</body>
+
 </html>
