--- a/uzduotys/uzduotis4/tautvydas/1/index.html
+++ b/uzduotys/uzduotis4/tautvydas/1/index.html
@@ -42,24 +42,46 @@
         <div class="col-md-1">.col-md-1</div>
       </div>
       <div class="row">
-          <div class="col-md-8" >
-              <div class="test">
-
-              </div>
-          </div>
-          <div class="col-md-4  test" >
+        <div class="col-md-8">
+          <div class="test">
 
           </div>
+        </div>
+        <div class="col-md-4  test">
+
+        </div>
       </div>
 
 
       <div class="row">
         <div class="col-md-3  col-md-offset-1   test red">
-
         </div>
-
       </div>
 
+      <br />
+      <br />
+      <br />
+
+      <div class="row   border  aukstis">
+        <div class="col-md-5 border aukstis">
+            000
+        </div>
+        <div class="col-md-7 border">
+          <div class="row border ">
+            <div class="col-md-6 border aukstis-200">
+              aa
+            </div>
+            <div class="col-md-6 aukstis-200">
+              bb
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-md-12 aukstis-200">
+                cc
+              </div>
+          </div>
+        </div>
+      </div>
 
     </header>
 
