--- a/uzduotys/uzduotis4/Mantas/1/index.html
+++ b/uzduotys/uzduotis4/Mantas/1/index.html
@@ -11,11 +11,47 @@
 
 <body>
 
-  <h1>Siandien dirbsime su Bootsrap</h1>
-  <p>
-    <i class="material-icons sofa">weekend</i>
-  </p>
+  <div class="container">
+    <div class="row border aukstis">
+      <div class="col-md-6 border aukstis">
 
+      </div>
+      <div class="col-md-6 border aukstis">
+        <div class="row border">
+          <div class="col-md-6 puse-aukscio border">
+
+          </div>
+          <div class="col-md-6 puse-aukscio">
+
+          </div>
+
+        </div>
+        <div class="row border puse-aukscio">
+          <div class="col-md-12">
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+  </div>
+  <footer>
+
+  </footer>
 </body>
 
 </html>
