--- a/uzduotys/uzduotys3-CSS/Nerijus/2 css/index.html
+++ b/uzduotys/uzduotys3-CSS/Nerijus/2 css/index.html
@@ -6,24 +6,27 @@
   <title>Sveiki atvyke</title>
    <link rel="stylesheet" type="text/css" href="css/main.css">
    <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
 </head>
 
 <body>
 
-    <main>
+
 <h1>Header</h1>
   <header>
 
 
 
-      <nav>
+    <nav>
+
+
           <ul>
               <li><a href="testuoju">HOME</a></li>
               <li><a href="testuoju">OUR TEAM</a></li>
               <li><a href="testuoju">projects</a></li>
               <li><a href="testuoju">contacts</a></li>
             </ul>
-      </nav>
+    </nav>
 
     <div id="search">
       <form>
@@ -35,13 +38,13 @@
       </form>
 
     </div>
-      <div class="clear-float"></div>
+
   </header>
     <div id="wrapper">
 <!-- musu turinys -->
 
       <section>
-        <h2 class="pirma">Article heading</h2>
+        <h2>Article heading</h2>
 
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
@@ -61,52 +64,33 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br /> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
           </p>
-        <h4>Another subsection</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br /> Duis aute irure dolor in reprehenderit in voluptate velit.
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
-          </p>
-        <h4>Subsection</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation <br /> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.
-          </p>
-        <h4>Another subsection</h4>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. <br /> Duis aute irure dolor in reprehenderit in voluptate velit.
-          </p>
+
+
 
 
       </section>
-        <div class="clear-float"></div>
+
         <aside>
-          <h4 class="antra">Related</h4>
-            <nav>
+          <h2>Related</h2>
+
+
+
+          <nav>
+
+
               <ul>
-                <li><a href="">Lorem ipsum dolor sit amet</a></li>
-                <li><a href="">consectetur adipisicing elit</a></li>
-                <li><a href="">Ut enim ad minim veniam</a></li>
-                <li><a href="">quis nostrud exercitation</a></li>
-                <li><a href="">Duis aute irure dolor in</a></li>
+                <li>Lorem ipsum dolor sit amet</li><br />
+                <li>consectetur adipisicing elit</li><br />
+                <li>Ut enim ad minim veniam</li><br />
+                <li>quis nostrud exercitation</li><br />
+                <li>Duis aute irure dolor in</li><br />
               </ul>
-            </nav>
+          </nav>
+          </aside>
 
-        </aside>
           <div class="clear-float"></div>
-
-
-
-
-
-
-
-
-
-
-
     </div>
-    </main>
+
     <footer>
         <p>
           &copy;Copyright 2050 by nobody. All right reversed.
