--- a/uzduotys/uzduotis4/Mantas/2/index.html
+++ b/uzduotys/uzduotis4/Mantas/2/index.html
@@ -6,14 +6,49 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css" />
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <title>Bootstap</title>
+  <title>Itstrap</title>
 </head>
 
 <body>
+  <div class="container">
+    <header class="green aukstis-100">
+      <div class="row">
+        <div class="col-md-12">
+          <h1>Header</h1>
 
-  <footer>
+        </div>
 
-  </footer>
+      </div>
+    </header>
+    <div id="wrapper" class="yellow">
+      <div class="row">
+        <div class="col-md-2 aukstis">
+          <h2>nav</h2>
+        </div>
+        <div class="col-md-8 aukstis white">
+          <h2>article</h2>
+        </div>
+        <div class="col-md-2 aukstis">
+          <h2>aside</h2>
+        </div>
+
+      </div>
+
+    </div>
+    <footer class="green">
+      <div class="row">
+        <div class="col-md-12">
+          <h3>footer</h3>
+
+        </div>
+
+      </div>
+    </footer>
+
+
+
+  </div>
+
 </body>
 
 </html>
