--- a/uzduotys/uzduotis5/tautvydas/2/index.html
+++ b/uzduotys/uzduotis5/tautvydas/2/index.html
@@ -19,9 +19,9 @@
 
     <div class="container-fluid">
 
-      <header class="green   aukstis-100">
+      <header class="">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-12 green   aukstis-100">
                 <h2>Header</h2>
             </div>
         </div>
