--- a/uzduotys/uzduotis4/Nerijus/3/index.html
+++ b/uzduotys/uzduotis4/Nerijus/3/index.html
@@ -10,37 +10,43 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="row aukstis-800">
-      <div class="col-md-2">
-        <h2>Nav</h2>
+
+<div class="container">
+  <div class="row aukstis-800 white">
+    <nav>
+
+
+      <div class="col-md-2 yellow aukstis-800">
+        NAV
       </div>
+    </nav>
+
+    <div class="col-md-10 orange aukstis-800">
       <header>
-        <div class="col-md-10 green aukstis-800">
-          <div class="row green size">
-            <h2>Header</h2>
-          </div>
+        <div class="row green size">
+          Header
+        </div>
+        <div id="wrapper">
           <div class="row white aukstis">
-            <h2>Article</h2>
-          </div>
-          <div class="row green size">
-            <h2>Footer</h2>
+            Articlr
           </div>
         </div>
-
       </header>
+      <footer>
+        <div class="row green size">
+          Footer
+        </div>
+      </footer>
+
     </div>
-    <div id="wrapper">
 
 
-    </div>
-
-
-    <footer>
-
-
-    </footer>
   </div>
+
+
+
+</div>
+
 </body>
 
 </html>
