--- a/uzduotys/uzduotis4/Nerijus/4/index.html
+++ b/uzduotys/uzduotis4/Nerijus/4/index.html
@@ -2,23 +2,16 @@
 <html>
 
 <head>
-  <html lang="lt">
   <meta charset="utf-8">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
   <link rel="stylesheet" type="text/css" href="lib/bootstrap/css/bootstrap.css" />
-  <!-- main.css eina po visu kitu CSS failu !!!! -->
+  <!-- main css turi buti visada paskutinis -->
   <link rel="stylesheet" type="text/css" href="css/main.css" />
-  <title>aa</title>
+  <title>UZDUOTIS 4</title>
 </head>
 
-
 <body>
-
   <div class="container">
-
-    <header class="green aukstis-100">
+    <header class="yellow aukstis-100 section-1">
       <div class="row">
         <div class="col-md-12">
           <h2>Header</h2>
@@ -27,25 +20,25 @@
     </header>
     <div id="wrapper" class="yellow">
       <div class="row">
-        <div class="col-md-2  aukstis">
-            <h2>Nav</h2>
+        <div class="col-md-8  aukstis" >
+          <h2>article</h2>
         </div>
-        <div class="col-md-8 aukstis white">
-            <h2>article</h2>
+        <div class="col-md-2 aukstis green">
+          <h2>Nav</h2>
         </div>
         <div class="col-md-2 aukstis">
-            <h2>aside</h2>
+          <h2>ads</h2>
         </div>
       </div>
     </div>
-
-    <footer class="green aukstis-100">
+    <footer class="yellow aukstis-100 section-5">
       <div class="row ">
-           <div class="col-md-12 ">
-             <h2>Footer</h2>
-           </div>
+        <div class="col-md-12">
+          <h2>Footer</h2>
+        </div>
       </div>
     </footer>
+
 
   </div>
 </body>
