--- a/uzduotys/uzduotys6/tautvydas/1-bootstrap-test/index.html
+++ b/uzduotys/uzduotys6/tautvydas/1-bootstrap-test/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="lt">
 
 <head>
-  <html lang="lt">
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -15,7 +14,18 @@
 
 
 <body class="  ">
- 
+
+    <div class="container">
+
+        <div class="row">
+          <div class="col-md-12">
+              <h1>testuosisme <small>bootstrap</small> dabar </h1>
+
+
+          </div>
+        </div>
+
+    </div>
 </body>
 
 </html>
