--- a/uzduotys/uzduotis4/Mantas/namuose/index.html
+++ b/uzduotys/uzduotis4/Mantas/namuose/index.html
@@ -10,46 +10,60 @@
 </head>
 
 <body>
-  <div class="container-float white">
-    <header>
-      <div class="row header-aukstis">
+  <div class="container-fluid">
+    <div class="blokas-1 yellow">
+      <div class="row">
         <div class="col-md-12">
-          <h2>Header</h2>
+          <header>
+            <h2>Header</h2>
+          </header>
         </div>
       </div>
-    </header>
+    </div>
+    <div class="blokas-2">
+      <div class="blokas-2-1">
+        <div class="row">
+          <div class="col-md-2">
+            <h2>Nav</h2>
+            <nav>
 
+            </nav>
+          </div>
+          <div class="col-md-10">
+        <div class="">
 
-    <div class="row nav-aukstis">
-      <div class="col-md-3">
-        <nav>
-          <h2>Nav</h2>
-        </nav>
-      </div>
-      <div class="col-md-9">
-          <div class="row">
-            <div class="article">
+            </div>
+            <div class="row">
               <div class="col-md-10">
                 <h2>Article</h2>
+                <section class="article">
+                </section>
               </div>
-            </div>
-            <div class="ads">
               <div class="col-md-2">
                 <h2>Ads</h2>
+                <section>
+
+                </section>
+              </div>
+
+
+            </div>
+          </div>
+          <div class="blokas-2-2">
+            <div class="row">
+              <div class="col-md-12">
+                <footer>Footer</footer>
               </div>
             </div>
           </div>
 
-            <footer>
-              <div class="row">
-                <h2>Footer</h2>
-              </div>
-            </footer>
+
+
         </div>
-
       </div>
-
     </div>
+
+  </div>
 
 
 
