--- a/uzduotys/uzduotys3-CSS/zygis/3/index.html
+++ b/uzduotys/uzduotys3-CSS/zygis/3/index.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="./css/main.css" />
@@ -14,7 +15,7 @@
 
 <body>
 
-<!--    <div class="container">-->
+    <div class="container-fluid gradient">
         <header>
             <a class="logo" href="index.html"><img src="./images/logo.png" alt="shirts logo" /></a>
             <h1>A new world of tailored shirts for women</h1>
@@ -36,7 +37,7 @@
                                 <label>Last name</label><br/>
                                 <input class="input-field" type="text" name="lname" value="" /><br/>
                             </div>
-                            <div class="col-md-12 col-sm-12 col-xs-12">
+                            <div class="col-md-12 col-sm-12 col-xs-12 center">
                                 <label>Your email address</label><br/>
                                 <input class="email-field" type="text" name="email" value="" /><br/>
 
@@ -47,7 +48,7 @@
                 </div>
             </div>
         </div>
-<!--    </div>-->
+    </div>
 
 </body>
 
