--- a/uzduotys/uzduotys6/tautvydas/1-bootstrap-test/index.html
+++ b/uzduotys/uzduotys6/tautvydas/1-bootstrap-test/index.html
@@ -34,6 +34,8 @@
                 <li> GALLERY  </li>
                 <li> CONTACTS  </li>
               </ul>
+              <!-- nutraukia float -->
+              <div class="clearfix">   </div>
 
               <table class="table   table-hover table-responsive ">
                 <!-- Antrastine eilute -->
@@ -99,6 +101,10 @@
 
               <img src="http://68.media.tumblr.com/33075dea1238585bce5b26296fe695c2/tumblr_inline_o4m75zvcj51tv67o3_400.jpg" class="img-responsive img-thumbnail center-block " />
 
+
+              <div class="page-header">
+                <h1>Example page header <small>Subtext for header</small></h1>
+              </div>
               <br>
               <br>
               <br>
