--- a/uzduotys/uzduotys6/andriuszygis/index.html
+++ b/uzduotys/uzduotys6/andriuszygis/index.html
@@ -11,6 +11,13 @@
 
 <body>
 
+    <div class="container">
+        <div class="col-md-12">
+            
+        </div>
+        
+    </div>
+
 
 </body>
 
