pataisyti conteinerio aukščio ir pločio parametrai (linkėjimai!:)

--- a/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/index.html
+++ b/uzduotys/uzduotys6/Simona_6/arune_simona/1-bootstrap-2/index.html
@@ -15,13 +15,13 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center"> testuosime <small> bootstrap </small> <span class="small"> dabar </span>
+        <h2 class="text-center"> Bendra užduotis <small> bootstrap </small> <span class="small"> dabar </span>
         </h2>
       </div>
     </div>
   </div>
 
-  <ul class="list-inline  pull-right">
+  <ul class="list-inline  pull-left">
     <li> HOME </li>
     <li> PROJECTS </li>
     <li> GALLERY </li>
