Mano dalis grupeje

--- a/uzduotys/uzduotys6/Mantas/1/index.html
+++ b/uzduotys/uzduotys6/Mantas/1/index.html
@@ -18,7 +18,51 @@
       <mark>Lorem</mark> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate <i>velit esse cillum dolore</i> eu fugiat nulla <b>Excepteur sint occaecat</b> pariatur. <u>cupidatat non proident,</u> sunt in <s>culpa qui officia</s> deserunt mollit anim id est laborum.
     </p>
     </div>
+    <h2 title="Cia yra">Kazkas</h2>
+    <ul class="list-inline pull right">
+      <li>Ho</li>
+      <li>Aba</li>
+    </ul>
+    <div class="clearfix">
 
+    </div>
+
+    <table class="table table-hover table-responsive">
+      <thead>
+        <tr class="danger">
+          <th>Nr</th>
+          <th>Name</th>
+          <th>Last name</th>
+        </tr>
+      </thead>
+
+      <tr>
+        <td>1</td>
+        <td>Tomas</td>
+        <td>Tomaitis</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Juozas</td>
+        <td>Smuozas</td>
+      </tr>
+      <tfoot>
+        <tr>
+          <td>dar neregistruotas</td>
+          <td> </td>
+          <td> </td>
+        </tr>
+
+      </tfoot>
+
+
+    </table>
+
+    <textarea rows="10"></textarea>
+    <button class="btn btn-default">Pirkti</button>
+    <a class="btn btn-danger yellow" href="">Parduoti</a>
+    <br />
+    <img src="https://s-media-cache-ak0.pinimg.com/736x/92/bd/51/92bd51939ce6e27f773aee3516b2cd6f--happy-monday-its-monday.jpg" class="img-responsive img-rounded center-block">
   </div>
 </div>
 
